--- a/index.html
+++ b/index.html
@@ -62,26 +62,26 @@
 
             </div> -->
             <div class="Answer">
-                <img src="\images\icons\key.svg" alt="key">
+                <img src="images\icons\key.svg" alt="key">
                 <h3>Amazing Car Collection</h3>
                 <p>La Rental offers a Huge selection of the best luxury and exotic cars from around the world. We carry popular models from Audi, Aston Martin, Bentley, BMW, Cadillac, Ferrari, Porsche, Tesla, Lamborghini, Land Rover, Maserati, Mercedes Benz
                     and more.</p>
             </div>
             <div class="Answer">
-                <img src="\images\icons\phone-call.svg" alt="key">
+                <img src="images\icons\phone-call.svg" alt="key">
                 <h3>24/7 Concierge Service</h3>
                 <p>We offer more than just luxury and exotic car rentals. We offer a unique concierge service. Our clients enjoy full walkthroughs of our cars, and any help they may need during their rental. In the event of any incidents we are there to
                     assist.
                 </p>
             </div>
             <div class="Answer">
-                <img src="\images\icons\globe.svg" alt="key">
+                <img src="images\icons\globe.svg" alt="key">
                 <h3>Flexible Bookings</h3>
                 <p>LA Luxury Car Rental offers our clients the flexibility of booking Luxury and Exotic cars OneWay making driving a Lamborghini down highway 1 a possibility. Simply input ANY pickup location and ANY dropoff location in the Rate quote box
                     to get a quote</p>
             </div>
             <div class="Answer">
-                <img src="\images\icons\tools.svg" alt="key">
+                <img src="images\icons\tools.svg" alt="key">
                 <h3>Safety, and Quality First</h3>
                 <p>La Luxury Car Rental offers cars that are Dealer maintained and in great condition. We clean and fuel every car before every Rental and we make sure they look, feel, and smell great. There are many luxury cars available to rent in California
                     but none like an LA Luxury Car Rental</p>
