--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li class="nav_links"><a href="#">Home</a></li>
                 <li class="nav_links"><a href="#">Gallery</a></li>
                 <li class="nav_links"><a href="#">Booking</a></li>
-                <li class="nav_links"><a href="#">Contact</a></li>
+                <li class="nav_links"><a href="pages/contact.html">Contact</a></li>
                 <li class="btn"><a href="#"><i class="fa fa-bars"></i></a></li>
             </ul>
         </nav>
