--- a/pages/contact.html
+++ b/pages/contact.html
@@ -56,16 +56,17 @@
                     </div>
                     <input type="email" class="cEmail" placeholder="Email id">
                     <input type="text" class="cCity" placeholder="City">
-                    <textarea placeholder="Your message" class="cMessage" maxlength="140" name="comment" aria-invalid="false" style="margin-top: 0px; margin-bottom: 0px; height: 177px;"></textarea>
-                    <button type="submit">Send message</button>
+                    <textarea placeholder="Your message" class="cMessage" aria-invalid="false"></textarea>
                 </form>
+                <button type="submit">Send message</button>
+
             </div>
             <div class="cMaps">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62219.7761468222!2d77.60604965833912!3d12.92468142479082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae159480cb4417%3A0x78adad203e4ed6c6!2sgohype.tech!5e0!3m2!1sfr!2sus!4v1613829894976!5m2!1sfr!2sus"
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7740.756425763593!2d77.64518727363641!3d12.875632420771678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae14ab516175cf%3A0x46366881ecebe83!2sSLS%20Summer%20Fields!5e0!3m2!1sen!2sma!4v1613899123071!5m2!1sen!2sma"
                     width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                <p>Address : Gohype Technologies Pvt. Ltd, Bengaluru, Karnataka, INDIA</p>
-                <p>Call us on : +91.80.471.88896</p>
-                <p>Email : contact@gohype.in</p>
+                <p><span class="title">Address :</span> Gohype Technologies Pvt. Ltd, Bengaluru, Karnataka, INDIA</p>
+                <p><span class="title">Call us on :</span><span class="cphon">+91.80.471.88896</span></p>
+                <p><span class="title">Email :</span> contact@luxuryCars.in</p>
             </div>
         </div>
     </main>
