--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,21 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+
+
     <!--FONT AWESOME-->
     <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Document</title>
-
-    <script>
-        $(document).ready(function() {
-            $('.btn').click(function() {
-                $('.nav_links').toggleClass("show");
-                $('ul li').toggleClass("hide");
-
-            });
-        });
-    </script>
 </head>
 
 <body>
@@ -50,20 +42,34 @@
         <div class="contact-us">
             <div class="cForm">
                 <form>
-                    <div class="cNamePhone">
-                        <input type="text" class="fName" placeholder="Fullname">
-                        <input type="text" class="pNumber" placeholder="phone number">
-                    </div>
-                    <input type="email" class="cEmail" placeholder="Email id">
-                    <input type="text" class="cCity" placeholder="City">
-                    <textarea placeholder="Your message" class="cMessage" aria-invalid="false"></textarea>
+
+                    <input type="text" class="fName" id="cName" placeholder="Fullname">
+
+                    <input type="text" class="pNumber" id="cNumber" placeholder="phone number">
+
+                    <input type="email" class="cEmail" id="cEmail" placeholder="Email id">
+                    <input type="text" class="cCity" id="cCity" placeholder="City">
+                    <textarea placeholder="Your message" class="cMessage" id="cMessage" aria-invalid="false"></textarea>
                 </form>
-                <button type="submit">Send message</button>
+                <button id="cmyBtn">Send message</button>
+            </div>
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
+
+                <!-- Modal content -->
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <p>Full name : <span id="mName">Some text in the Modal.. </span></p>
+                    <p>Phone number : <span id="mNumber">Some text in the Modal.. </span></p>
+                    <p>Email id : <span id="mEmail">Some text in the Modal.. </span></p>
+                    <p>city : <span id="mCity">Some text in the Modal.. </span></p>
+                    <p>message : <span id="mMessage">Some text in the Modal.. </span></p>
+                </div>
 
             </div>
             <div class="cMaps">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7740.756425763593!2d77.64518727363641!3d12.875632420771678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae14ab516175cf%3A0x46366881ecebe83!2sSLS%20Summer%20Fields!5e0!3m2!1sen!2sma!4v1613899123071!5m2!1sen!2sma"
-                    width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 <p><span class="title">Address :</span> Gohype Technologies Pvt. Ltd, Bengaluru, Karnataka, INDIA</p>
                 <p><span class="title">Call us on :</span><span class="cphon">+91.80.471.88896</span></p>
                 <p><span class="title">Email :</span> contact@luxuryCars.in</p>
@@ -98,6 +104,7 @@
     </footer>
 
     <!-- end footer -->
+    <script src="../scripts/script.js"></script>
 </body>
 
 
