add page gallery

--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -13,7 +13,7 @@
     <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Contact</title>
+    <title>Gallery</title>
 </head>
 
 <body>
@@ -32,47 +32,21 @@
                 <li class="btn"><a href="#"><i class="fa fa-bars"></i></a></li>
             </ul>
         </nav>
-        <div class="header-content">
-            <h1 class="title_contact">Feel free to Contact us</h1>
+        <div class="header-gallery">
+            <h1 class="title_Gallery">Feel free to Contact us</h1>
         </div>
     </header>
     <!-- end header -->
     <!-- main -->
     <main>
-        <div class="contact-us">
-            <div class="cForm">
-                <form>
-
-                    <input type="text" class="fName" id="cName" placeholder="Fullname">
-
-                    <input type="text" class="pNumber" id="cNumber" placeholder="phone number">
-
-                    <input type="email" class="cEmail" id="cEmail" placeholder="Email id">
-                    <input type="text" class="cCity" id="cCity" placeholder="City">
-                    <textarea placeholder="Your message" class="cMessage" id="cMessage" aria-invalid="false"></textarea>
-                </form>
-                <button id="cmyBtn">Send message</button>
-            </div>
-            <!-- The Modal -->
-            <div id="myModal" class="modal">
-
-                <!-- Modal content -->
-                <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <p>Full name : <span id="mName"></span></p>
-                    <p>Phone number : <span id="mNumber"></span></p>
-                    <p>Email id : <span id="mEmail"></span></p>
-                    <p>city : <span id="mCity"></span></p>
-                    <p>message : <span id="mMessage"></span></p>
+        <div class="Gallery">
+            <div class="gallery-cars">
+                <img class="gallery-img" src="../images/Lamborghini-Huracan.jpg" alt="Lamborghini Huracan">
+                <div class="title">
+                    <h2 class="gallery-title">cars1</h2>
+                    <p class="gallery-discription">test tset</p>
                 </div>
 
-            </div>
-            <div class="cMaps">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7740.756425763593!2d77.64518727363641!3d12.875632420771678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae14ab516175cf%3A0x46366881ecebe83!2sSLS%20Summer%20Fields!5e0!3m2!1sen!2sma!4v1613899123071!5m2!1sen!2sma"
-                    height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                <p><span class="title">Address :</span> Gohype Technologies Pvt. Ltd, Bengaluru, Karnataka, INDIA</p>
-                <p><span class="title">Call us on :</span><span class="cphon">+91.80.471.88896</span></p>
-                <p><span class="title">Email :</span> contact@luxuryCars.in</p>
             </div>
         </div>
     </main>
