--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <ul>
                 <li class="logo">Luxury<span>Cars</span></li>
                 <li class="nav_links"><a href="#">Home</a></li>
-                <li class="nav_links"><a href="#">Gallery</a></li>
+                <li class="nav_links"><a href="pages/Gallery.html">Gallery</a></li>
                 <li class="nav_links"><a href="#">Booking</a></li>
                 <li class="nav_links"><a href="pages/contact.html">Contact</a></li>
                 <li class="btn"><a href="#"><i class="fa fa-bars"></i></a></li>
