update page gallery

--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -20,7 +20,7 @@
     <!-- header -->
     <header>
         <div class="mbackground">
-            <img src="../images/ferrari_f12berlinetta_ferrada_wheels.jpg" alt="ferrari f12berlinetta ferrada wheels">
+            <img src="../images/redcharlie-mugDbuNnbd0-unsplash.jpg" alt="ferrari f12berlinetta ferrada wheels">
         </div>
         <nav>
             <ul>
@@ -33,22 +33,71 @@
             </ul>
         </nav>
         <div class="header-gallery">
-            <h1 class="title_Gallery">Feel free to Contact us</h1>
+            <!-- <h1 class="title_Gallery">Feel free to Contact us</h1> -->
         </div>
     </header>
     <!-- end header -->
     <!-- main -->
     <main>
+        <h2>cars</h2>
         <div class="Gallery">
             <div class="gallery-cars">
-                <img class="gallery-img" src="../images/Lamborghini-Huracan.jpg" alt="Lamborghini Huracan">
-                <div class="title">
-                    <h2 class="gallery-title">cars1</h2>
-                    <p class="gallery-discription">test tset</p>
+                <img class="gallery-img" src="../images/gallery/cars/Audi-A7_Sportback_2015_9941.jpg" alt="Audi A7 Sportback 2015">
+                <div class="gallery-title">
+                    <h2>Audi A7 Sportback 2015</h2>
                 </div>
+            </div>
 
+            <div class="gallery-cars">
+                <img class="gallery-img" src="../images/gallery/cars/Jaguar-XJ-2017-02.jpg" alt="Jaguar XJ 2017">
+                <div class="gallery-title">
+                    <h2>Jaguar XJ 2017</h2>
+                </div>
+            </div>
+            <div class="gallery-cars">
+                <img class="gallery-img" src="../images/gallery/cars/Range-Rover-Supercharged-0320.jpg" alt="Range Rover Supercharged">
+                <div class="gallery-title">
+                    <h2>Range Rover Supercharged</h>
+                </div>
+            </div>
+
+            <div class="gallery-cars">
+                <img class="gallery-img" src="../images/gallery/cars/Rolls-Royce-Dawn-030.jpg" alt="Rolls Royce Dawn">
+                <div class="gallery-title">
+                    <h2>Rolls Royce Dawn</h>
+                </div>
             </div>
         </div>
+        <h2>motorcycle</h2>
+        <div class="Gallery">
+            <div class="gallery-cars">
+                <img class="gallery-img" src="../images/gallery/moto/Harley-Davidson-Livewire-Production-Version-1.jpg" alt="Harley Davidson Livewire Production Version">
+                <div class="gallery-title">
+                    <h2>Harley Davidson Livewire Production Version</h2>
+                </div>
+            </div>
+
+            <div class="gallery-cars">
+                <img class="gallery-img" src="../images/gallery/moto/lito-sora-electric-superbike-soon-available-for-41000-58438_1.jpg" alt="lito sora electric superbike soon available">
+                <div class="gallery-title">
+                    <h2>lito sora electric superbike soon available</h2>
+                </div>
+            </div>
+            <div class="gallery-cars">
+                <img class="gallery-img" src="../images/gallery/moto/Mission R  13  1.jpg" alt="Mission R  13">
+                <div class="gallery-title">
+                    <h2>Mission R 13</h>
+                </div>
+            </div>
+
+            <div class="gallery-cars">
+                <img class="gallery-img" src="../images/gallery/moto/Motorrad-MY19-HP4-Image-3 (1).jpg" alt="Motorrad MY19 HP4">
+                <div class="gallery-title">
+                    <h2>Motorrad MY19 HP4</h>
+                </div>
+            </div>
+        </div>
+
     </main>
     <!-- end main -->
 
