--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li class="logo">Luxury<span>Cars</span></li>
                 <li class="nav_links"><a href="#">Home</a></li>
                 <li class="nav_links"><a href="pages/Gallery.html">Gallery</a></li>
-                <li class="nav_links"><a href="#">Booking</a></li>
+                <li class="nav_links"><a href="pages/booking.html">Booking</a></li>
                 <li class="nav_links"><a href="pages/contact.html">Contact</a></li>
                 <li class="btn"><a href="#"><i class="fa fa-bars"></i></a></li>
             </ul>
