--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,7 +27,7 @@
                 <li class="logo">Luxury<span>Cars</span></li>
                 <li class="nav_links"><a href="../index.html">Home</a></li>
                 <li class="nav_links"><a href="Gallery.html">Gallery</a></li>
-                <li class="nav_links"><a href="#">Booking</a></li>
+                <li class="nav_links"><a href="booking.html">Booking</a></li>
                 <li class="nav_links"><a href="contact.html">Contact</a></li>
                 <li class="btn"><a href="#"><i class="fa fa-bars"></i></a></li>
             </ul>
