--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="header-content">
             <span class="pha1">Europe’s finest car hire <span class="pha2">experience</span></span>
             <p>Select from hundreds of luxury cars. Book online within minutes</p>
-            <button>Book Now</button>
+            <button onclick="location.href='pages/booking.html'">Book Now</button>
         </div>
     </header>
     <!-- end header -->
@@ -54,34 +54,34 @@
     <main>
         <!--div  WHY-CHOOSE -->
         <h2>WHY CHOOSE luxury Cars</h2>
-        <div class="WHY-CHOOSE">
-            <!-- <div class="thow-answer">
+        <div class=" WHY-CHOOSE ">
+            <!-- <div class="thow-answer ">
 
             </div>
-            <div class="thow-answer">
+            <div class="thow-answer ">
 
             </div> -->
-            <div class="Answer">
-                <img src="images\icons\key.svg" alt="key">
+            <div class="Answer ">
+                <img src="images\icons\key.svg " alt="key ">
                 <h3>Amazing Car Collection</h3>
                 <p>La Rental offers a Huge selection of the best luxury and exotic cars from around the world. We carry popular models from Audi, Aston Martin, Bentley, BMW, Cadillac, Ferrari, Porsche, Tesla, Lamborghini, Land Rover, Maserati, Mercedes Benz
                     and more.</p>
             </div>
-            <div class="Answer">
-                <img src="images\icons\phone-call.svg" alt="key">
+            <div class="Answer ">
+                <img src="images\icons\phone-call.svg " alt="key ">
                 <h3>24/7 Concierge Service</h3>
                 <p>We offer more than just luxury and exotic car rentals. We offer a unique concierge service. Our clients enjoy full walkthroughs of our cars, and any help they may need during their rental. In the event of any incidents we are there to
                     assist.
                 </p>
             </div>
-            <div class="Answer">
-                <img src="images\icons\globe.svg" alt="key">
+            <div class="Answer ">
+                <img src="images\icons\globe.svg " alt="key ">
                 <h3>Flexible Bookings</h3>
                 <p>LA Luxury Car Rental offers our clients the flexibility of booking Luxury and Exotic cars OneWay making driving a Lamborghini down highway 1 a possibility. Simply input ANY pickup location and ANY dropoff location in the Rate quote box
                     to get a quote</p>
             </div>
-            <div class="Answer">
-                <img src="images\icons\tools.svg" alt="key">
+            <div class="Answer ">
+                <img src="images\icons\tools.svg " alt="key ">
                 <h3>Safety, and Quality First</h3>
                 <p>La Luxury Car Rental offers cars that are Dealer maintained and in great condition. We clean and fuel every car before every Rental and we make sure they look, feel, and smell great. There are many luxury cars available to rent in California
                     but none like an LA Luxury Car Rental</p>
@@ -93,19 +93,19 @@
         <!--div  FEATURED CARS -->
 
         <h2>FEATURED CARS</h2>
-        <div class="featured-cars">
-            <div class="cars">
-                <img src="images/Lamborghini-Huracan.jpg" alt="Lamborghini Huracan">
+        <div class="featured-cars ">
+            <div class="cars ">
+                <img src="images/Lamborghini-Huracan.jpg " alt="Lamborghini Huracan ">
                 <h3>Lamborghini Huracan LP-610</h3>
                 <p>5.2 Liter V10, 610HP, Auto Navigation, iPod Connect, Lift+, Sports Exhaust, Bluetooth Connection, All Wheel Drive</p>
             </div>
-            <div class="cars">
-                <img src="images/Porsche-911-Turbo.jpg" alt="Lamborghini Huracan">
+            <div class="cars ">
+                <img src="images/Porsche-911-Turbo.jpg " alt="Lamborghini Huracan ">
                 <h3>Porsche 911 Turbo Convertible</h3>
                 <p>3.8 Liter TwinTurbo V6, 500HP, Auto Navigation, BOSE Sound, iPod Connect, Rear Wind Deflector</p>
             </div>
-            <div class="cars">
-                <img src="images/Tesla-Model-X.jpg">
+            <div class="cars ">
+                <img src="images/Tesla-Model-X.jpg ">
                 <h3>Tesla Model X P90D</h3>
                 <p>90Kw Battery, 762HP, Auto Ludicrous Speed Upgrade, Complimentary Supercharging</p>
             </div>
@@ -116,12 +116,12 @@
         <h2>
             ABOUT Luxury Cars
         </h2>
-        <div class="about-cars">
-            <p><span class="phara1">We Specialize in Customer Service. Our clients enjoy concierge like service from the time they take delivery of their luxury or Exotic car. Our representatives are experienced with features of these unique cars and aquaint each renter with
-                the amazing features, and special options offered by the car.</span> <span class="phara2">The convenience starts from the time a client visits our website! Our website is designed to simplify the Luxury or Exotic Car Rental process. To recieve an instant rate
+        <div class="about-cars ">
+            <p><span class="phara1 ">We Specialize in Customer Service. Our clients enjoy concierge like service from the time they take delivery of their luxury or Exotic car. Our representatives are experienced with features of these unique cars and aquaint each renter with
+                the amazing features, and special options offered by the car.</span> <span class="phara2 ">The convenience starts from the time a client visits our website! Our website is designed to simplify the Luxury or Exotic Car Rental process. To recieve an instant rate
                     quote simply input your pick-up and drop-off locations in the “Get Quote” link above. Input your dates and times and select your car choice from our selection of luxury and exotic cars . You will instantly be quoted a rate that includes
                     all taxes and fees. You then have the option to select insurance waivers, additional miles, additional delivery and pickup services etc. Our website makes reserving your luxury or exotic car hassle-free.</span></p>
-            <img src="images/Lamborghini-Urus.jpg" alt="">
+            <img src="images/Lamborghini-Urus.jpg " alt=" ">
         </div>
         <!-- end about cars-->
 
@@ -130,24 +130,24 @@
 
     <!-- footer -->
     <footer>
-        <div class="footer">
-            <div class="row">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-                <a href="#"><i class="fa fa-youtube"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
+        <div class="footer ">
+            <div class="row ">
+                <a href="# "><i class="fa fa-facebook "></i></a>
+                <a href="# "><i class="fa fa-instagram "></i></a>
+                <a href="# "><i class="fa fa-youtube "></i></a>
+                <a href="# "><i class="fa fa-twitter "></i></a>
             </div>
 
-            <div class="row">
+            <div class="row ">
                 <ul>
-                    <li><a href="#">Contact us</a></li>
-                    <li><a href="#">Our Services</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="# ">Contact us</a></li>
+                    <li><a href="# ">Our Services</a></li>
+                    <li><a href="# ">Privacy Policy</a></li>
+                    <li><a href="# ">Terms & Conditions</a></li>
                 </ul>
             </div>
 
-            <div class="row">
+            <div class="row ">
                 Copyright © 2021 luxury Cars - All rights reserved
             </div>
         </div>
